style.css
/* ... */
/*--------------------------------------------------------------
## Circle Images
--------------------------------------------------------------*/
img.circle-image {
	border-radius: 50%;
	border: 1px solid #d8d8d8;
	padding: 1.25rem;
}


/*--------------------------------------------------------------
## Style helpers
--------------------------------------------------------------*/
.content-and-media::after {
	content: '';
	display: table;
	clear: both;
}

.inline-div {
	display: inline-block;
	margin: 1em 0;
	position: relative;
	width: 55%;
}

.inline-div.right {
	float: right;
}

.inline-div.left {
	float: left;
}

.center-text {
	text-align: center;
}

.full-width-background {
	background-color: #d8d8d8;
	padding: 2em;
	position: relative;
}

.full-width-background::before,
.full-width-background::after {
	content: '';
	background-color: #d8d8d8;
	display: block;
	height: 100%;
	position: absolute;
	top: 0;
	width: 100%;
}

.full-width-background::before {
	left: -100%;
}

.full-width-background::after {
	left: 100%;
}

/*--------------------------------------------------------------
## Embeds
--------------------------------------------------------------*/
.center-embed.wp-block-embed {
	text-align: center;
}

.center-tweet .twitter-tweet {
	margin-left: auto;
	margin-right: auto;
}

/*--------------------------------------------------------------
## Error and Offline pages
--------------------------------------------------------------*/

@media screen and (min-width: 48em) {
	body.offline .page-header,
	body.error500 .page-header,
	body.error404 .page-header {
		float: none;
		text-align: center;
		width: 100%;
	}
}

body.offline .page-header .page-title,
body.error500 .page-header .page-title,
body.error404 .page-header .page-title {
	font-size: 26px;
	font-size: 1.625rem;
	letter-spacing: 0.082em;
}

body.colors-light.offline .page-header .page-title,
body.colors-light.error500 .page-header .page-title,
body.colors-light.error404 .page-header .page-title {
	color: #666;
}

body.offline .page-header .page-title::after,
body.error500 .page-header .page-title::after,
body.error404 .page-header .page-title::after {
	display: none;
}

body.offline .page-content,
body.error500 .page-content,
body.error404 .page-content {
	text-align: center;
}

/*--------------------------------------------------------------
## Fancy List Styles
--------------------------------------------------------------*/
.entry-content ul {
	list-style-type: none;
}

.entry-content ul li {
	margin-bottom: 0.5em;
	padding-left: 2.5em;
	position: relative;
}

.entry-content ul li::before {
	border-radius: 50%;
	border: 1px solid #979797;
	content: '';
	display: block;
	height: 33px;
	left: -0.5em;
	position: absolute;
	top: calc(50% - 15px);
	width: 33px;
}

.entry-content ul li::after {
	background-color: #57A1E6;
	border-radius: 50%;
	content: '';
	display: block;
	height: 20px;
	left: -3px;
	position: absolute;
	top: calc(50% - 8px);
	width: 20px;
}

